--- a/src/app/pages/connect/connect.component.html
+++ b/src/app/pages/connect/connect.component.html
@@ -12,9 +12,12 @@
     </div>
     <div class="row">
       <div class="col">
-        <button type="button" class="btn btn-primary" [disabled]="isConnecting" (click)="connect()">
+        <button *ngIf="!isConnecting" type="button" class="btn btn-primary"  (click)="connect()">
           Connect
         </button>
+        <div *ngIf="isConnecting" class="spinner-border text-light" role="status">
+          <span class="sr-only">Loading...</span>
+        </div>
       </div>
     </div>
   </div>
