--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -35,10 +35,10 @@ body {
 
 .engine-wrapper {
   position: absolute;
-  top: 0;
-  right: 0;
+  // top: 0;
+  // right: 0;
   bottom: 0;
-  left: 0;
+  // left: 0;
   z-index: 0;
 
   #renderCanvas {
