--- a/src/app/games/coin-collector-game/coin-collector-game.component.html
+++ b/src/app/games/coin-collector-game/coin-collector-game.component.html
@@ -3,21 +3,16 @@
 </div>
 
 <div class="toolbar">
-  <div class="list-group">
-    <a class="list-group-item list-group-item-action list-group-item-warning">
-      <i class="fas fa-coins mr-2"></i> {{coinsCollected}}
-    </a>
-  </div>
-</div>
-
-<div class="settings">
   <div class="card">
     <div class="card-body">
-      <div>
+      <div class="form-group">
         <label for="gameSpeedRange">Game speed</label>
         <input type="range" #gameSpeedControl class="form-control" min="0" max="10" step="0.25" [value]="speed"
           (input)="setGameSpeed(+gameSpeedControl.value)" id="gameSpeedRange">
       </div>
+      <p>
+        <i class="fas fa-coins text-warning mr-2"></i> {{coinsCollected}}
+      </p>
     </div>
   </div>
 </div>
