Padding instead of margin

--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,8 +1,8 @@
 <div class="back-button" [routerLink]="['/menu']">
   <i class="fa fa-arrow-left text-primary"></i>
 </div>
-<div class="container mt-5">
-  <div class="row text-center d-flex align-items-center justify-content-center mb-4">
+<div class="container">
+  <div class="row text-center d-flex align-items-center justify-content-center p-4">
     <div class="col col-md-6">
       <h1>Settings</h1>
       <div class="form-group">
