--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -34,3 +34,7 @@
     </div>
   </div>
 </div>
+
+<div class="developer-mode" [routerLink]="['/developer']">
+  <i class="fa fa-code text-primary"></i>
+</div>
