Fix styling on developer component

--- a/src/app/pages/developer/developer.component.html
+++ b/src/app/pages/developer/developer.component.html
@@ -1,7 +1,11 @@
-<div class="container-fluid">
-  <div class="row mb-4 mt-4">
+<div class="back-button" [routerLink]="['/settings']">
+  <i class="fa fa-arrow-left text-primary"></i>
+</div>
+
+<div class="container">
+  <div class="row">
     <div class="col">
-      <div class="card">
+      <div class="card mt-4 mb-4">
         <div class="card-body">
           <!-- <h5 class="card-title">Spirometer Calibration</h5> -->
           <div class="row justify-content-between">
