Move developer shortcut to menu

--- a/src/app/pages/developer/developer.component.html
+++ b/src/app/pages/developer/developer.component.html
@@ -1,4 +1,4 @@
-<div class="back-button" [routerLink]="['/settings']">
+<div class="back-button" [routerLink]="['/menu']">
   <i class="fa fa-arrow-left text-primary"></i>
 </div>
 
