--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -27,3 +27,7 @@
     </div>
   </div>
 </div>
+
+<div class="developer-mode" [routerLink]="['/developer']">
+  <i class="fa fa-code text-primary"></i>
+</div>
