--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,25 +1,25 @@
 <div class="container text-center d-flex align-items-center justify-content-center">
   <div class="row menu-buttons">
-    <div class="col-3">
+    <div class="col">
       <button class="btn btn-primary" (click)="spiromagicService.setTutorialCompleted(false)"
         [routerLink]="['/tutorial']">
         <i class="fa fa-adjust"></i>
       </button>
       <p>Tutorial</p>
     </div>
-    <div class="col-3">
+    <div class="col">
       <button class="btn btn-primary" [routerLink]="['/game/coin-collector']">
         <i class="fa fa-gamepad"></i>
       </button>
       <p>Coin Collector game</p>
     </div>
-    <div class="col-3">
+    <div class="col">
       <button class="btn btn-primary" [routerLink]="['/game/balloon']">
         <i class="fa fa-gamepad"></i>
       </button>
       <p>Balloon game</p>
     </div>
-    <div class="col-3">
+    <div class="col">
       <button class="btn btn-primary" [routerLink]="['/settings']">
         <i class="fa fa-cog"></i>
       </button>
