Add logo to menu

--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,3 +1,7 @@
+
+  <div class="text-center">
+    <img class="logo" src="assets/logo.png" alt="">
+  </div>
 <div class="container text-center d-flex align-items-center justify-content-center">
   <div class="row menu-buttons">
     <div class="col">
