--- a/src/app/pages/menu/menu.component.scss
+++ b/src/app/pages/menu/menu.component.scss
@@ -11,6 +11,12 @@
   }
 }
 
+.logo {
+  margin-top: 15%;
+  margin-bottom: -15%;
+  width: 100px;
+}
+
 .developer-mode {
   z-index: 99;
   position: absolute;
