--- a/src/app/pages/tutorial/tutorial.component.html
+++ b/src/app/pages/tutorial/tutorial.component.html
@@ -53,7 +53,7 @@
   </div>
   <div class="row">
     <div class="col">
-      <button [disabled]="calibrationProgress !== 100" type="button" class="btn btn-primary" (click)="finish()">
+      <button type="button" class="btn btn-primary" (click)="finish()">
         Finish tutorial
       </button>
     </div>
