--- a/src/app/pages/calibration/calibration.component.html
+++ b/src/app/pages/calibration/calibration.component.html
@@ -51,7 +51,28 @@
       </div>
     </div>
   </div>
-  <div *ngIf="exhalationCompleted && inhalationCompleted">
+  <div *ngIf="exhalationCompleted && inhalationCompleted && calibrationProgress !== 100">
+    <div class="back-button" (click)="inhalationCompleted = false">
+      <i class="fa fa-arrow-left text-primary"></i>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h1>Calibration almost done</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p>
+          Keep using the spirometer until the progression bar is filled out
+        </p>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0"
+            aria-valuemin="0" aria-valuemax="100" [style.width.%]="calibrationProgress"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div *ngIf="exhalationCompleted && inhalationCompleted && calibrationProgress === 100">
     <div class="back-button" (click)="inhalationCompleted = false">
       <i class="fa fa-arrow-left text-primary"></i>
     </div>
