Description to games and edited some text

--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -15,13 +15,13 @@
       <button class="btn btn-primary" [routerLink]="['/game/coin-collector']">
         <i class="fa fa-gamepad"></i>
       </button>
-      <p>Coin Collector game</p>
+      <p>Coin Collector</p>
     </div>
     <div class="col">
       <button class="btn btn-primary" [routerLink]="['/game/balloon']">
         <i class="fa fa-gamepad"></i>
       </button>
-      <p>Balloon game</p>
+      <p>Balloon</p>
     </div>
     <div class="col">
       <button class="btn btn-primary" [routerLink]="['/settings']">
