--- a/src/app/pages/tutorial/tutorial.component.html
+++ b/src/app/pages/tutorial/tutorial.component.html
@@ -39,7 +39,7 @@
     <div class="col">
       <p>
         Slowly inhale from your nose.<br>
-        Slowly exhale from your mouth and fill out the circle.
+        Slowly exhale into the SpiroMagic device and fill out the circle.
       </p>
       <p>
         Change the sensitivity, if it is too easy or difficult to fill out the circle.
