--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -7,19 +7,19 @@
     <div class="col">
       <button class="btn btn-primary" (click)="spiromagicService.setTutorialCompleted(false)"
         [routerLink]="['/tutorial']">
-        <i class="fa fa-adjust"></i>
+        <i class="fas fa-life-ring"></i>
       </button>
       <p>Tutorial</p>
     </div>
     <div class="col">
       <button class="btn btn-primary" [routerLink]="['/game/coin-collector']">
-        <i class="fa fa-gamepad"></i>
+        <i class="fas fa-plane-departure"></i>
       </button>
       <p>Coin Collector</p>
     </div>
     <div class="col">
       <button class="btn btn-primary" [routerLink]="['/game/balloon']">
-        <i class="fa fa-gamepad"></i>
+        <i class="fas fa-dot-circle"></i>
       </button>
       <p>Balloon</p>
     </div>
