Use light color instead of primary

--- a/src/app/games/balloon-game/balloon-game.component.html
+++ b/src/app/games/balloon-game/balloon-game.component.html
@@ -1,5 +1,5 @@
 <div class="back-button" [routerLink]="['/menu']">
-  <i class="fa fa-arrow-left text-primary"></i>
+  <i class="fa fa-arrow-left text-light"></i>
 </div>
 
 <div class="engine-wrapper">
