--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,5 +1,5 @@
 <div class="back-button" [routerLink]="['/menu']">
-  <i class="fa fa-arrow-left text-primary"></i>
+  <i class="fa fa-arrow-left text-light"></i>
 </div>
 <div class="container">
   <div class="row text-center d-flex align-items-center justify-content-center p-4">
@@ -12,10 +12,10 @@
         <small class="form-text text-muted">How sensitive should the readings be.</small>
       </div>
       <div class="mt-4">
-        <button type="button" class="btn btn-primary" (click)="resetReadings()">
+        <button type="button" class="btn btn-light" (click)="resetReadings()">
           Reset readings
         </button>
-        <button type="button" class="btn btn-primary ml-2" (click)="resetCalibration()">
+        <button type="button" class="btn btn-light ml-2" (click)="resetCalibration()">
           Reset calibration
         </button>
       </div>
