--- a/src/app/pages/tutorial/tutorial.component.html
+++ b/src/app/pages/tutorial/tutorial.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="container text-center d-flex align-items-center justify-content-center" *ngIf="!tutorialStarted">
   <div class="back-button" [routerLink]="['/calibration']">
-    <i class="fa fa-arrow-left text-primary"></i>
+    <i class="fa fa-arrow-left text-light"></i>
   </div>
   <div>
     <div class="row">
@@ -24,7 +24,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <button type="button" class="btn btn-primary" (click)="tutorialStarted = true">
+        <button type="button" class="btn btn-light" (click)="tutorialStarted = true">
           Continue
         </button>
       </div>
@@ -33,7 +33,7 @@
 </div>
 <div class="container text-center mt-4" *ngIf="tutorialStarted  && !(spiromagicService.tutorialFinished$ | async)">
   <div class="back-button" (click)="tutorialStarted = false">
-    <i class="fa fa-arrow-left text-primary"></i>
+    <i class="fa fa-arrow-left text-light"></i>
   </div>
   <div class="row">
     <div class="col">
@@ -53,7 +53,7 @@
   </div>
   <div class="row">
     <div class="col">
-      <button type="button" class="btn btn-primary" (click)="finish()">
+      <button type="button" class="btn btn-light" (click)="finish()">
         Finish tutorial
       </button>
     </div>
