--- a/src/app/games/coin-collector-game/coin-collector-game.component.html
+++ b/src/app/games/coin-collector-game/coin-collector-game.component.html
@@ -5,14 +5,12 @@
 <div class="toolbar">
   <div class="card">
     <div class="card-body">
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="gameSpeedRange">Game speed</label>
         <input type="range" #gameSpeedControl class="form-control" min="0" max="10" step="0.25" [value]="speed"
           (input)="setGameSpeed(+gameSpeedControl.value)" id="gameSpeedRange">
-      </div>
-      <p>
-        <i class="fas fa-coins text-warning mr-2"></i> {{coinsCollected}}
-      </p>
+      </div> -->
+      <i class="fas fa-coins text-warning mr-2"></i> {{coinsCollected}}
     </div>
   </div>
 </div>
