Routing should not implicate whether its game related or not

--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -8,13 +8,13 @@
       <p>Tutorial</p>
     </div>
     <div class="col">
-      <button class="btn btn-light" [routerLink]="['/game/coin-collector']">
+      <button class="btn btn-light" [routerLink]="['/application/coin-collector']">
         <i class="fas fa-plane-departure"></i>
       </button>
       <p>Coin Collector</p>
     </div>
     <div class="col">
-      <button class="btn btn-light" [routerLink]="['/game/balloon']">
+      <button class="btn btn-light" [routerLink]="['/application/balloon']">
         <i class="fas fa-dot-circle"></i>
       </button>
       <p>Balloon</p>
