--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -20,6 +20,12 @@
       <p>Balloon</p>
     </div>
     <div class="col">
+      <button class="btn btn-light" [routerLink]="['/application/chart']">
+        <i class="fas fa-chart-line"></i>
+      </button>
+      <p>Chart</p>
+    </div>
+    <div class="col">
       <button class="btn btn-light" [routerLink]="['/settings']">
         <i class="fa fa-cog"></i>
       </button>
