--- a/src/app/pages/browser-not-supported/browser-not-supported.component.html
+++ b/src/app/pages/browser-not-supported/browser-not-supported.component.html
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="col">
         <p>
-          Your browser does not support the Web Bluetooht API, full list of supported browser can be seen
+          Your browser does not support the Web Bluetooth API, full list of supported browsers can be seen
           <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Bluetooth_API#browser_compatibility"
             target="blank">here</a>.
         </p>
