Rename and arrange menu

--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -8,22 +8,22 @@
       <p>Tutorial</p>
     </div>
     <div class="col">
-      <button class="btn btn-light" [routerLink]="['/application/coin-collector']">
-        <i class="fas fa-plane-departure"></i>
-      </button>
-      <p>Coin Collector</p>
-    </div>
-    <div class="col">
       <button class="btn btn-light" [routerLink]="['/application/balloon']" [state]="{ guidance: true }">
         <i class="fas fa-dot-circle"></i>
       </button>
-      <p>Balloon 1</p>
+      <p>Exercise 1</p>
     </div>
     <div class="col">
       <button class="btn btn-light" [routerLink]="['/application/balloon']" [state]="{ guidance: false }">
         <i class="fas fa-dot-circle"></i>
       </button>
-      <p>Balloon 2</p>
+      <p>Exercise 2</p>
+    </div>
+    <div class="col">
+      <button class="btn btn-light" [routerLink]="['/application/coin-collector']">
+        <i class="fas fa-plane-departure"></i>
+      </button>
+      <p>Coin Collector</p>
     </div>
     <div class="col">
       <button class="btn btn-light" [routerLink]="['/settings']">
