Prepare text application (Exercise 3)

--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -20,6 +20,12 @@
       <p>Exercise 2</p>
     </div>
     <div class="col">
+      <button class="btn btn-light" [routerLink]="['/application/text']" [state]="{ guidance: false }">
+        <i class="fas fa-align-justify"></i>
+      </button>
+      <p>Exercise 3</p>
+    </div>
+    <div class="col">
       <button class="btn btn-light" [routerLink]="['/application/coin-collector']">
         <i class="fas fa-plane-departure"></i>
       </button>
