--- a/src/app/applications/balloon/balloon.component.html
+++ b/src/app/applications/balloon/balloon.component.html
@@ -2,6 +2,29 @@
   <i class="fa fa-arrow-left text-light"></i>
 </div>
 
+<div class="instructions-button" data-toggle="modal" data-target="#instructionsModal" role="button">
+  <i class="fa fas fa-question text-light"></i>
+</div>
+
 <div class="engine-wrapper">
   <canvas #rendererCanvas id="renderCanvas"></canvas>
+</div>
+
+<div class="modal fade" id="instructionsModal" tabindex="-1" role="dialog" aria-labelledby="instructionsModalTitle"
+  aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Instructions</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" [innerHtml]="instructions">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
