Implement instructions for exercises

--- a/src/app/applications/text/text.component.html
+++ b/src/app/applications/text/text.component.html
@@ -6,15 +6,13 @@
   <div>
     <div class="row">
       <div class="col">
-        <h1>Text</h1>
+        <h1>Exercise 3</h1>
       </div>
     </div>
     <div class="row">
       <div class="col">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat.
+          In this application, you will slowly inhale through your nose for 4 seconds and slowly exhale into the SpiroMagic for 6 seconds. Repeat this 10 times.
         </p>
       </div>
     </div>
