--- a/src/app/pages/calibration/calibration.component.html
+++ b/src/app/pages/calibration/calibration.component.html
@@ -63,7 +63,7 @@
     <div class="row">
       <div class="col">
         <p>
-          Keep using the spirometer until the progression bar is filled out
+          Keep the SpiroMagic still until the progression bar is full
         </p>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0"
