--- a/src/app/pages/tutorial/tutorial.component.html
+++ b/src/app/pages/tutorial/tutorial.component.html
@@ -18,7 +18,7 @@
         <p>
           In this application,
           you are going to use a breathing technique
-          called <b>Pursed lip breathing</b>.
+          called <b>paced breathing</b>.
         </p>
       </div>
     </div>
